fix z-index issue with chat settings

--- a/styl/app.styl
+++ b/styl/app.styl
@@ -45,6 +45,7 @@ a
   display: none;
 
 #chat-settings
+  z-index: 2;
   background-color: #1f282d;
   position: absolute;
   right: 0;
